--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
     "type": "library",
     "license": "prorietary",
-    "name": "pajak21/ayyash479",
+    "name": "21pungli/ayyash479",
     "authors": [
         {
             "name": "Yahya Ayyash",
